# SciXHarvesterPipeline

./: .coverage  .coveragerc  .gitignore  .gitmodules  Dockerfile  README.md  config.py  dev-requirements.txt  docker-compose.yaml  docker-compose.yaml.orig  harvester.avsc  harvester_metadata_output.avsc  postgres_init_gRPC_status.bash  pyproject.toml  pytest.ini  requirements.txt  run.py  test_arxiv_getRecords.py
.github/workflows/: python_actions.yml
.tmp/: .coverage
API/: README.md  avro_serializer.py  harvester_client.py  harvester_server.py
AVRO_schemas/: HarvesterOutputSchema.avsc  harvester.avsc
SciXHarvester/: .coverage  alembic.ini  config.py  run.py
SciXHarvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SciXHarvester/API/: README.md  avro_serializer.py  harvester_client.py  harvester_server.py
SciXHarvester/API/grpc_modules/: harvester_grpc.py
SciXHarvester/AVRO_schemas/: HarvesterInputSchema.avsc  HarvesterOutputSchema.avsc
SciXHarvester/alembic/: env.py
SciXHarvester/alembic/versions/: 2ccc7651e959_harvester_records_table.py  6bfebb4af6ba_initialize_database.py
SciXHarvester/harvester/: db.py  harvester.py  models.py  s3_methods.py  utils.py
SciXHarvester/harvester/base/: OAIHarvester.py
SciXHarvester/harvester/metadata/: arxiv_harvester.py  classic_harvester.py
SciXHarvester/scripts/ksql/: tables.sql
SciXHarvester/tests/API/: base.py  test_avro_serializer.py  test_harvester_client.py  test_harvester_server.py  (+1 more)
alembic/: env.py
alembic/versions/: 2ccc7651e959_harvester_records_table.py  6bfebb4af6ba_initialize_database.py
harvester/: OAIHarvester.py  arxiv_harvester.py  config.py  db.py  harvester.py  harvester_temp.py  models.py  s3_methods.py  utils.py  xml_parsers.py
harvester/base/: OAIHarvester.py
harvester/metadata/: arxiv_harvester.py
harvester/tests/: .coverage  test_s3.py
images/confluentinc-connect-custom/: Dockerfile
postgres/: init-db-once.sql
scripts/: entrypoint.sh  kafka_create_topics.py  migrate_db.py
scripts/ksql/: init_ksql.sh  inserts.sql  sink_connectors.sql  source_connectors.sql  streams.sql
scripts/postgres/: init-db-once.sql  postgres_init_gRPC_status.bash
tests/data/: GetRecord_data.xml
tests/harvester/: base.py  test_alembic.py  test_base_OAIHarvester.py  test_harvester.py  test_metadata_arxiv_harvester.py
tests/harvester_gRPC/: base.py  test_harvester_server.py
(+21 files in other folders)
